--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "framer-motion": "^12.23.24",
     "motion": "^12.23.24",
     "next": "16.0.1",
+    "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "react": "19.2.0",
     "react-dom": "19.2.0",
