--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-inlinesvg": "^4.2.0",
+    "react-shaders": "^0.0.4",
     "react-use-measure": "^2.1.7",
     "resize-observer-polyfill": "^1.5.1",
     "swiper": "^12.0.3",
