--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.24",
     "motion": "^12.23.24",
     "next": "16.0.1",
