--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-separator": "^1.1.8",
@@ -24,6 +25,7 @@
     "dotenv": "^17.2.3",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.24",
+    "lucide-react": "^0.553.0",
     "motion": "^12.23.24",
     "next": "16.0.1",
     "postcss": "^8.5.6",
@@ -33,6 +35,7 @@
     "react-inlinesvg": "^4.2.0",
     "react-shaders": "^0.0.4",
     "react-use-measure": "^2.1.7",
+    "recharts": "2.15.4",
     "resize-observer-polyfill": "^1.5.1",
     "swiper": "^12.0.3",
     "tailwind-merge": "^3.3.1",
