--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,5 +23,5 @@
       "mode": "auto"
     }
   ],
-  "cSpell.words": ["Embla", "orbitron", "satoshi", "Tokenomics"]
+  "cSpell.words": ["Embla", "inlinesvg", "orbitron", "satoshi", "Tokenomics"]
 }
