--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.3",
+    "@tabler/icons-react": "^3.35.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
@@ -30,6 +31,7 @@
     "next": "16.0.1",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
+    "radix-ui": "^1.4.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-inlinesvg": "^4.2.0",
@@ -37,6 +39,7 @@
     "react-use-measure": "^2.1.7",
     "recharts": "2.15.4",
     "resize-observer-polyfill": "^1.5.1",
+    "scroller-motion": "^1.2.3",
     "swiper": "^12.0.3",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
