--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "embla-carousel-react": "^8.6.0",
+    "ethers": "^6.15.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.553.0",
     "motion": "^12.23.24",
