--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "tsc": "tsc --noEmit"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-progress": "^1.1.7",
@@ -23,28 +24,22 @@
     "@tabler/icons-react": "^3.35.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "dotenv": "^17.2.3",
     "embla-carousel-react": "^8.6.0",
     "ethers": "^6.15.0",
     "framer-motion": "^12.23.24",
-    "lucide-react": "^0.553.0",
     "motion": "^12.23.24",
     "next": "16.0.1",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
-    "radix-ui": "^1.4.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-inlinesvg": "^4.2.0",
-    "react-shaders": "^0.0.4",
     "react-use-measure": "^2.1.7",
     "recharts": "2.15.4",
     "resize-observer-polyfill": "^1.5.1",
     "swiper": "^12.0.3",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
-    "zod": "^4.1.12",
-    "zustand": "^5.0.8"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
