--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "tsc": "tsc --noEmit"
   },
   "dependencies": {
+    "@base-org/account": "^2.5.0",
+    "@metamask/sdk": "^0.34.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
@@ -21,7 +23,12 @@
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.3",
+    "@rainbow-me/rainbowkit": "^2.2.10",
+    "@safe-global/safe-apps-provider": "^0.18.6",
+    "@safe-global/safe-apps-sdk": "^9.1.0",
     "@tabler/icons-react": "^3.35.0",
+    "@tanstack/react-query": "^5.90.12",
+    "@walletconnect/ethereum-provider": "^2.23.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
@@ -38,6 +45,8 @@
     "swiper": "^12.0.3",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
+    "viem": "~2.41.2",
+    "wagmi": "^3.1.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
