--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ethers": "^6.15.0",
     "motion": "^12.23.24",
     "next": "^16.0.1",
+    "poseidon-lite": "^0.3.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "react": "19.2.0",
